--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: youtube
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -30,16 +31,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.7.2
+  http: ^1.4.0
+  cupertino_icons: ^1.0.8
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  get: ^4.7.2
-  http: ^1.4.0
-  shared_preferences: ^2.5.3
+  
+ 
+
+  #for offline video play
+  video_player: ^2.10.0
+
+
+  #use firebase in flutter application 
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.17.6
+  
 
   
-   
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/videos/videoplayback.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
