--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/videos/videoplayback.mp4
+    - assets\videos\videoplayback.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
